--- a/template/Game.html
+++ b/template/Game.html
@@ -177,6 +177,7 @@
 <script type="text/javascript" src="Game/../out/game/project/ProjectGame.js" ></script>
 <script type="text/javascript" src="Game/../out/game/GameGate.js" ></script>
 <script type="text/javascript" src="Game/../out/game/GCMain.js" ></script>
+<script type="text/javascript" src="Game/../out/SetStates/SetStates.js" ></script>
 <script type="text/javascript" src="Game/../out/system/CustomCommandParams.js" ></script>
 <script type="text/javascript" src="Game/../out/system/CustomConditionParams.js" ></script>
 <script type="text/javascript" src="Game/../out/system/CustomGameNumberParams.js" ></script>
